tests/ui/error-codes/E0080.stderr
error[E0080]: attempt to shift left by `500_i32`, which would overflow
  --> $DIR/E0080.rs:2:9
   |
LL |     X = (1 << 500),
   |         ^^^^^^^^^^ evaluation of constant value failed here

error[E0080]: attempt to divide `1_isize` by zero
  --> $DIR/E0080.rs:3:9
   |
LL |     Y = (1 / 0),
   |         ^^^^^^^ evaluation of constant value failed here

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0080`.
